force-app/main/default/objects/BEIntegration_CountriesToCities__c/BEIntegration_CountriesToCities__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Each entry in this custom setting represents a city. City&apos;s name is in Name field of the record.</description>
    <label>BEIntegration_CountryToCities</label>
</CustomObject>