force-app/main/default/objects/BEIntegration_CountriesToCities__c/fields/City_Backend_Id__c.field-meta.xml
<CustomField>
    <fullName>City_Backend_Id__c</fullName>
    <label>City Backend Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>