force-app/main/default/objects/BEIntegration_CountriesToCities__c/fields/Country_Backend_Id__c.field-meta.xml
<CustomField>
    <fullName>Country_Backend_Id__c</fullName>
    <label>Country Backend Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>