force-app/main/default/objects/BEIntegration_CountriesToCities__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country ISO code</description>
    <label>Country Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>