force-app/main/default/objects/BEIntegration_CountriesToCities__c/listViews/All_countries.listView-meta.xml
<ListView>
    <fullName>All_countries</fullName>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>City_Backend_Id__c</columns>
    <columns>Country_Backend_Id__c</columns>
    <columns>Country_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - countries</label>
    <language>en_US</language>
</ListView>